--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -77,3 +77,21 @@ jobs:
           build-args: |
             AY_AZURE_SQL_PASSWORD=${{ secrets.AY_AZURE_SQL_PASSWORD }}
             AY_AZURE_SQL_USERNAME=${{ secrets.AY_AZURE_SQL_USERNAME }}
+  
+  Azure_Container_Push:
+    runs-on: ubuntu-latest
+    needs: Docker_Build_Push
+    steps:
+      - name: Log in to Azure
+        uses: azure/login@v1
+        with:
+          creds: ${{ secrets.AZURE_CREDENTIALS }}
+
+      - name: Update Container App
+        uses: azure/container-apps-deploy-action@v0
+        with:
+          imageToDeploy: ghcr.io/imperial-telehealth/video:latest
+          containerAppName: video
+          containerAppEnvironment: Telehealth
+          resourceGroup: TeleHealth-rg
+          targetPort: 5000
